gulp file update

--- a/assets/scss/_body.scss
+++ b/assets/scss/_body.scss
@@ -1,9 +1,9 @@
-
-.card {
+// card
+.card { 
     .card-img-top {
-       border-radius: 0 !important;
-    }
-}
+       border-radius: 0 !important; 
+    }  
+}  
 
 // Extra small devices (portrait phones, less than 576px)
 // No media query for `xs` since this is the default in Bootstrap
@@ -16,7 +16,7 @@
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) { 
 
-}
+} 
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) { 
