--- a/assets/scss/_body.scss
+++ b/assets/scss/_body.scss
@@ -1,9 +1,24 @@
 // card
 .card { 
+
+	border: 0 !important; 
+ 
     .card-img-top {
        border-radius: 0 !important; 
     }  
 }  
+
+#programSection {
+
+	.jumbotron { 
+	 	padding: 0 0 !important;
+	}
+	.carousel-control-prev,
+	.carousel-control-next {   
+	    top: -95% !important;
+	}
+
+}
 
 // Extra small devices (portrait phones, less than 576px)
 // No media query for `xs` since this is the default in Bootstrap
@@ -20,6 +35,7 @@
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) { 
+
     .carousel-inner { height: 100vh; }
 
     .carousel-caption { top: 40%; }
@@ -30,6 +46,7 @@
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) { 
+
     .carousel-inner { height: 100vh; }
 
     .carousel-caption { top: 40%; }
